# Evosim

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: main.cpp
src/brain/: CMakeLists.txt  brain.cpp
src/brain/includes/: brain.hpp
src/entity/: CMakeLists.txt  bird.cpp  entity.cpp  env.cpp  pipe.cpp
src/entity/includes/: bird.hpp  entity.hpp  env.hpp  pipe.hpp
src/ui/: CMakeLists.txt  ui.cpp
src/ui/includes/: ui.hpp
